--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "github:mysqljs/mysql",
     "node-cron": "^2.0.3",
     "request": "^2.88.0"
